--- a/GitversionTest/gitversion.yml
+++ b/GitversionTest/gitversion.yml
@@ -1,3 +1,7 @@
-﻿mode: Mainline
 assembly-versioning-scheme: MajorMinorPatch
+mode: Mainline
 next-version: 1.0.0
+branches: {}
+ignore:
+  sha: []
+merge-message-formats: {}
